# evernote-ringbuffer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: RingBuffer.h  main.cpp
